@@ -102,6 +102,8 @@ dpkg (1.17.11) UNRELEASED; urgency=low
     one of the build types excluding them.
   * Add new -g and -G options to dpkg-genchanges and dpkg-buildpackage for
     source plus arch-indep/specific builds. Closes: #756975
+  * Fix dpkg --add-architecture and --remove-architecture to check that they
+    get exactly one argument. Closes: #757254
 
   [ Updated programs translations ]
   * Danish (Joe Dalton). Closes: #754127
